; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_platform_linux.c_platform_tls_get.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_platform_linux.c_platform_tls_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@process_attached = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Attaching process\00", align 1
@client_tls = common dso_local global i32 0, align 4
@client_thread_detach = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @platform_tls_get(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @process_attached, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = call i32 @vcos_log_trace(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 (...) @client_process_attach()
  store i32 1, i32* @process_attached, align 4
  %9 = load i32, i32* @client_tls, align 4
  store i32 %9, i32* %2, align 4
  %10 = call i32 (...) @vc_vchi_khronos_init()
  br label %11

11:                                               ; preds = %6, %1
  %12 = load i32, i32* %2, align 4
  %13 = call i8* @vcos_tls_get(i32 %12)
  store i8* %13, i8** %3, align 8
  %14 = load i8*, i8** %3, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %22, label %16

16:                                               ; preds = %11
  %17 = call i32 (...) @client_thread_attach()
  %18 = load i32, i32* @client_thread_detach, align 4
  %19 = call i32 @vcos_thread_at_exit(i32 %18, i32* null)
  %20 = load i32, i32* %2, align 4
  %21 = call i8* @vcos_tls_get(i32 %20)
  store i8* %21, i8** %3, align 8
  br label %22

22:                                               ; preds = %16, %11
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i32 @vcos_log_trace(i8*) #1

declare dso_local i32 @client_process_attach(...) #1

declare dso_local i32 @vc_vchi_khronos_init(...) #1

declare dso_local i8* @vcos_tls_get(i32) #1

declare dso_local i32 @client_thread_attach(...) #1

declare dso_local i32 @vcos_thread_at_exit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
